@@ -16,7 +16,7 @@
 uschar spam_score_buffer[16];
 uschar spam_score_int_buffer[16];
 uschar spam_bar_buffer[128];
-uschar spam_action_buffer[32];
+uschar * spam_action_buffer;
 uschar spam_report_buffer[32600];
 uschar prev_user_name[128] = "";
 int spam_ok = 0;
@@ -92,12 +92,6 @@ if (Ustrncmp(param, "time=", 5) == 0)
     return 1; /* skip spamd server */
 
   return 0; /* OK */
-  }
-
-if (Ustrcmp(param, "variant=rspamd") == 0)
-  {
-  spamd->is_rspamd = TRUE;
-  return 0;
   }
 
 if (Ustrncmp(param, "tmo=", 4) == 0)
@@ -367,37 +361,16 @@ start = time(NULL);
   }
 
 (void)fcntl(spamd_cctx.sock, F_SETFL, O_NONBLOCK);
-/* now we are connected to spamd on spamd_cctx.sock */
-if (sd->is_rspamd)
-  {				/* rspamd variant */
-  uschar *req_str;
-  const char *helo;
-  const char *fcrdns;
+/* now we are connected to spamd on spamd_sock */
 
-  req_str = string_sprintf("CHECK RSPAMC/1.3\r\nContent-length: %lu\r\n"
-    "Queue-Id: %s\r\nFrom: <%s>\r\nRecipient-Number: %d\r\n",
-    mbox_size, message_id, sender_address, recipients_count);
-  for (i = 0; i < recipients_count; i ++)
-    req_str = string_sprintf("%sRcpt: <%s>\r\n", req_str, recipients_list[i].address);
-  if ((helo = expand_string(US"$sender_helo_name")) != NULL && *helo != '\0')
-    req_str = string_sprintf("%sHelo: %s\r\n", req_str, helo);
-  if ((fcrdns = expand_string(US"$sender_host_name")) != NULL && *fcrdns != '\0')
-    req_str = string_sprintf("%sHostname: %s\r\n", req_str, fcrdns);
-  if (sender_host_address != NULL)
-    req_str = string_sprintf("%sIP: %s\r\n", req_str, sender_host_address);
-  req_str = string_sprintf("%s\r\n", req_str);
-  wrote = send(spamd_cctx.sock, req_str->s, req_str->ptr, 0);
-  }
-  else
-  {				/* spamassassin variant */
-  (void)string_format(spamd_buffer,
-	  sizeof(spamd_buffer),
-	  "REPORT SPAMC/1.2\r\nUser: %s\r\nContent-length: %ld\r\n\r\n",
-	  user_name,
-	  mbox_size);
-  /* send our request */
-  wrote = send(spamd_cctx.sock, spamd_buffer, Ustrlen(spamd_buffer), 0);
-  }
+(void)string_format(spamd_buffer,
+	sizeof(spamd_buffer),
+	"REPORT SPAMC/1.2\r\nUser: %s\r\nContent-length: %ld\r\n\r\n",
+	user_name,
+	mbox_size);
+/* send our request */
+wrote = send(spamd_cctx.sock, spamd_buffer, Ustrlen(spamd_buffer), 0);
+
 if (wrote == -1)
   {
   (void)close(spamd_cctx.sock);
@@ -420,7 +393,6 @@ if (wrote == -1)
 pollfd.fd = spamd_cctx.sock;
 pollfd.events = POLLOUT;
 #endif
-(void)fcntl(spamd_cctx.sock, F_SETFL, O_NONBLOCK);
 do
   {
   read = fread(spamd_buffer,1,sizeof(spamd_buffer),mbox_file);
@@ -487,8 +459,7 @@ if (ferror(mbox_file))
 (void)fclose(mbox_file);
 
 /* we're done sending, close socket for writing */
-if (!sd->is_rspamd)
-  shutdown(spamd_cctx.sock, SHUT_WR);
+shutdown(spamd_cctx.sock, SHUT_WR);
 
 /* read spamd response using what's left of the timeout.  */
 memset(spamd_buffer, 0, sizeof(spamd_buffer));
@@ -512,33 +483,6 @@ if (i <= 0 && errno != 0)
 /* reading done */
 (void)close(spamd_cctx.sock);
 
-if (sd->is_rspamd)
-  {				/* rspamd variant of reply */
-  int r;
-  if (  (r = sscanf(CS spamd_buffer,
-	  "RSPAMD/%7s 0 EX_OK\r\nMetric: default; %7s %lf / %lf / %lf\r\n%n",
-	  spamd_version, spamd_short_result, &spamd_score, &spamd_threshold,
-	  &spamd_reject_score, &spamd_report_offset)) != 5
-     || spamd_report_offset >= offset		/* verify within buffer */
-     )
-    {
-    log_write(0, LOG_MAIN|LOG_PANIC,
-	      "%s cannot parse spamd %s, output: %d", loglabel, callout_address, r);
-    return DEFER;
-    }
-  /* now parse action */
-  p = &spamd_buffer[spamd_report_offset];
-
-  if (Ustrncmp(p, "Action: ", sizeof("Action: ") - 1) == 0)
-    {
-    p += sizeof("Action: ") - 1;
-    q = &spam_action_buffer[0];
-    while (*p && *p != '\r' && (q - spam_action_buffer) < sizeof(spam_action_buffer) - 1)
-      *q++ = *p++;
-    *q = '\0';
-    }
-  }
-else
   {				/* spamassassin */
   /* dig in the spamd output and put the report in a multiline header,
   if requested */
@@ -557,8 +501,7 @@ else
 	}
     }
 
-  Ustrcpy(spam_action_buffer,
-    spamd_score >= spamd_threshold ? "reject" : "no action");
+  spam_action_buffer = spamd_score >= spamd_threshold ? US"reject" : US"no action";
   }
 
 /* Create report. Since this is a multiline string,
